--- a/Application.properties
+++ b/Application.properties
@@ -1,5 +1,6 @@
-APP_KEY=main
-APP_ROUTES=/
-IS_MODULE=true
-APP_PRIORITY=-1
-APP_TITLE=Main
+APP_KEY=tv
+APP_ROUTES=/tv
+IS_MODULE=false
+APP_PRIORITY=1
+APP_TITLE=TV
+APP_ICON=icon.svg
