--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-jest": "^25.0.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^3.0.0",
+    "css-loader": "^6.5.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -47,17 +48,21 @@
     "husky": "^0.14.3",
     "jsdoc": "^3.5.5",
     "prettier": "^1.10.2",
+    "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@tbiegner99/home-automation-components": "^1.0.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@tbiegner99/home-automation-components": "^1.0.2",
     "@tbiegner99/react-forms": "^1.0.14",
     "@tbiegner99/ui-app-components": "^1.0.1",
     "auto-bind-inheritance": "^1.0.6",
     "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
     "moment": "^2.29.1",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
